style.css
* {
  box-sizing: border-box;
  -webkit-touch-callout:none;                /* prevent callout to copy image, etc when tap to hold */
  -webkit-text-size-adjust:none;             /* prevent webkit from resizing text to fit */
  -webkit-tap-highlight-color:rgba(0,0,0,0); /* prevent tap highlight color / shadow */
}
.chip {
  display: inline-block;
  padding: 0 15px;
  height: 35px;
  font-size: 16px;
  line-height: 36px;
  color: #303030;
  border-radius: 25px;
	margin-right: 5px;
	margin-top: 5px;
	user-select: none;
	cursor: pointer;
  background-color: rgba(200, 200, 200, .4);
}
.chip:hover {
	background-color: rgba(200, 200, 200, .5)
}
.chip:active {
	background-color: rgba(200, 200, 200, .6)
}
.active {
	background-color: rgba(200, 200, 200, .9) !important
}
a {
  color: #2196f3
}
.center {
  text-align: center;
}
html {
  overflow-x:hidden;
}
body {
  margin: 0;
  padding: 0;
  overflow-x: hidden;
  font-weight: 100
}

nav {
  padding: 10px;
}

#main {
  padding: 10px;
}

.row {
  height: auto
}

a {
  text-decoration: none
}

.s7 {
	width: 75%;
}
.s3 {
	width: 25%;
	padding-top: 50px
}
.s4 {
  width: 33.333%
}

#articles a {
  color: #303030;
  font-size: 20px
}

nav ul {
  padding: 0;
}

nav li {
  list-style-type: none;
  display: inline
}

.modal-footer {
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  padding: 5px;
  height: 50px
}

.right {
  float: right;
}

.left {
  float: left;
}

.modal {
  position: fixed;
  transform: scale(.9) translate(-50%, -50%);
  margin: auto;
  width: 50vw;
  top: 50vh;
  left: 50vw;
  transform-origin: left top;
  opacity: 0;
  display: none;
  z-index: 999999999999999999 !important;
  transition: transform .2s, opacity .2s;
  box-shadow: 3px 3px 40px rgba(0, 0, 0, 0.4);
  background: white;
}

@media only screen and (max-width: 992px) {
  .modal {
    width: 90%;
  }
}

@media only screen and (min-width: 992px) {
  .hide-on-desktop {
    display: none
  }
}

.modal-content {
  padding: 10px 20px;
}

.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  display: none;
  height: 100%;
  z-index: 9991;
  background: #212121;
  transition: all .2s;
  background: rgba(0, 0, 0, 0.3)
}

nav a {
  color: #303030;
  text-decoration: none;
  padding: 10px
}

footer {
  text-align: center;
  background: #f3f4f5;
}

.icon {
  display: inline-block;
  padding: 5px;
  margin-bottom: 10px;
}

.icon:active svg {
  color: grey
}

* {
  font-family: 'Nunito', sans-serif;
}

.container {
  margin: 0 auto;
  max-width: 1280px;
  width: 90%
}

h1 {
  font-size: 40px;
  letter-spacing: -1;
  line-height: 38px
}

button {
  font-weight: 400;
  border-radius: 999999999px;
  transition: transform .2s, opacity .2s, box-shadow .2s;
  border: 0;
  padding: 0 30px;
  line-height: 40px;
  background: #0097a7;
  color: white;
  outline: 0;
  cursor: pointer;
  box-shadow: 0 2px 15px rgba(0, 151, 167, .3);
  user-select: none;
  margin-right: 5px
}

button:hover {
  box-shadow: 0 2px 20px rgba(0, 151, 167, .3);
  opacity: .9
}

button:active {
  transform: translateY(2px)
}

.white {
  background: #ebf4f5;
  color: black;
  box-shadow: none
}

.white:hover {
  box-shadow: none
}

@media only screen and (min-width: 601px) {
  .container {
    width: 85%
  }
}

.m12 {
  padding: 10px;
}

#articles .card {
  height: 100px;
  padding: 15px !important
}

.content {
  padding: 10px;
}

#visual {
  margin-top: 10px
}

.content:not(#articles .content) {
  min-height: 180px;
}

.card {
  width: 100%;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  border-radius: 15px;
  transition: all .2s;
  display: inline-block;
}

.visit_btn {
  display: block;
  padding: 10px;
  border-radius: 10px;
  transition: transform .2s;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
  color: white;
  background-color: #303030;
}

.card:focus {
  outline: 0;
  box-shadow: inset 0px 0px 0px 2px rgba(0, 0, 0, 0.97), 0 4px 10px rgba(0, 0, 0, 0.1);
}

.visit_btn:hover {
  opacity: .9;
}

.card:hover {
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
}

footer a {
  text-decoration: none;
  color: #303030;
  margin: 10px
}

@media only screen and (min-width: 993px) {
  .container {
    width: 70%
  }
}

h4 {
  font-size: 20px
}
.hide {
	display: none !important
}
@media only screen and (max-width: 800px) {
	.hide-on-mobile {
		display: none !important
	}
  .m12 {
    width: 100% !important
  }
  .card {
    height: auto !important;
    transform: none !important
  }
}

.right {
  float: right
}

b {
  font-weight: 800
}
.pens h4 {
  padding-left: 10px
}
.col {
  float: left;
}

h2 {
  font-size: 30px
}

.s6 {
  width: 50%
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.spacer {
  margin-top: 50px
}

.btn-flat {
  padding: 10px;
  color: #303030;
}

.btn-flat:hover {
  background: #eee
}

.btn-flat {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  padding: 0 8px;
  min-width: 64px;
  vertical-align: middle;
  text-align: center;
  text-overflow: ellipsis;
  text-transform: uppercase;
  color: rgb(var(--pure-material-primary-rgb, 33, 150, 243));
  background-color: transparent;
  font-family: var(--pure-material-font, "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system);
  font-size: 14px;
  font-weight: 500;
  line-height: 36px;
  overflow: hidden;
  outline: none;
  cursor: pointer;
}
.s5 {
  width: 50%
}
.visit_btn i {
  float: right;
  transition: all .2s !important;
  margin-right: 10px
}

.visit_btn:hover i {
  margin-right: 5px
}

.btn-flat::-moz-focus-inner {
  border: none;
}
/* Overlay */

.btn-flat::before {
  content: "";
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  background-color: currentColor;
  opacity: 0;
  transition: opacity 0.2s;
}
/* Hover, Focus */
.input {
  margin-bottom: 10px
}
textarea {
  min-height: 150px
}
.input label {
  position: absolute;
  color: #aaa;
  font-size: 15px;
  margin-top: 15px;
  transition: margin-top .3s, font-size .3s, margin-left .3s, padding .3s, color .2s;
}
.input input,.input textarea {
  outline: none;
  border: 0;
  width: 100%;
  padding: 15px 0px;
  transition: border .2s, box-shadow .2s;
  border-bottom: 1.5px solid #aaa;
  font-size: 15px
}
.input input:focus,.input textarea:focus {
  border-color: #512da8;
  box-shadow: 0px -1px 0px 0px #512da8 inset;
}
.input input:focus ~ label,.input textarea:focus ~ label  {
  color: #512da8
}
.input-active label {
  font-size: 13px !important;
  margin-top: -5px;
  margin-left: -1px;
  color: #512da8;
}
.input-border input,.input-border textarea {
  border: 1.5px solid #aaa;
  padding-left: 10px;
  border-radius: 3px;
}
.input-border input:focus,.input-border textarea:focus {
  box-shadow: 0px 0px 0px 1px rgba(81,45,168,1);
}
.input-border label {
  background: white;
  margin-left: 10px;
}
.input-border.input-active label {
  margin-top: -6px;
  padding: 0 3px;
  margin-left: 6px;
  color: #512da8
}
.input-filled-in-not-focus label {
  color: #aaa !important
}
.btn-flat:hover::before {
  opacity: 0.04;
}

.btn-flat:focus::before {
  opacity: 0.12;
}

.btn-flat:hover:focus::before {
  opacity: 0.16;
}
/* Active */

.btn-flat:active::after {
  opacity: 0.16;
  transform: translate(-50%, -50%) scale(0);
  transition: transform 0s;
}
/* Disabled */

.btn-flat:disabled {
  color: rgba(var(--pure-material-onsurface-rgb, 0, 0, 0), 0.38);
  background-color: transparent;
  cursor: initial;
}

@keyframes fade-up {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1
  }
}

.image img {
  width: 100%
}
[data-tooltip]:hover {
	position: relative;
}
[data-tooltip]:hover::before {
	all: initial;
	font-family: Arial, Helvetica, sans-serif;
	display: inline-block;
	border-radius: 5px;
	padding: 10px;
	background-color: #1a1a1a;
	content: attr(data-tooltip);
	color: #f9f9f9;
	position: absolute;
	bottom: 100%;
	width: 100px;
	left: 50%;
	transform: translate(-50%, 0);
	margin-bottom: 15px;
	text-align: center;
	font-size: 14px;
}
[data-tooltip-bottom]:hover,
[data-tooltip-left]:hover,
[data-tooltip-right]:hover,
[data-tooltip]:hover {
	position: relative;
}
[data-tooltip-bottom]:hover::after,
[data-tooltip-left]:hover::after,
[data-tooltip-right]:hover::after,
[data-tooltip]:hover::after {
	all: initial;
	display: inline-block;
	width: 0; 
	height: 0; 
	border-left: 10px solid transparent;
	border-right: 10px solid transparent;		  
	border-top: 10px solid #1a1a1a;
	position: absolute;
	bottom: 100%;
	content: '';
	left: 50%;
	transform: translate(-50%, 0);
	margin-bottom: 5px;
}
[data-tooltip-right]:hover::after {
	margin-bottom: 0;
	bottom: auto;
	transform: rotate(90deg) translate(0, -50%);
	left: 100%;
	top: 50%;
	margin-left: -5px;
	margin-top: -5px;
}
[data-tooltip-left]:hover::after {
	margin-bottom: 0;
	bottom: auto;
	transform: rotate(-90deg) translate(0, -50%);
	left: auto;
	right: 100%;
	top: 50%;
	margin-right: -5px;
	margin-top: -5px;
}
[data-tooltip-bottom]:hover::after {
	margin-bottom: 0;
	bottom: auto;
	transform: rotate(180deg) translate(-50%, 0);
	top: 100%;
	margin-left: -20px;
	margin-top: 5px;
}
[data-tooltip-bottom]:hover::before,
[data-tooltip-left]:hover::before,
[data-tooltip-right]:hover::before,
[data-tooltip]:hover::before {
	all: initial;
	font-family: Arial, Helvetica, sans-serif;
	display: inline-block;
	border-radius: 5px;
	padding: 10px;
	background-color: #1a1a1a;
	content: attr(data-tooltip);
	color: #f9f9f9;
	position: absolute;
	bottom: 100%;
	width: 100px;
	left: 50%;
	transform: translate(-50%, 0);
	margin-bottom: 15px;
	text-align: center;
	font-size: 14px;
}
[data-tooltip-right]:hover::before {
	margin-bottom: 0;
	bottom: auto;
	transform: translate(0, -50%);
	left: 100%;
	top: 50%;
	content: attr(data-tooltip-right);
	margin-left: 15px;
}
[data-tooltip-left]:hover::before {
	margin-bottom: 0;
	bottom: auto;
	transform: translate(0, -50%);
	left: auto;
	right: 100%;
	top: 50%;
	content: attr(data-tooltip-left);
	margin-right: 15px;
}
[data-tooltip-bottom]:hover::before {
	margin-bottom: 0;
	bottom: auto;
	top: 100%;
	content: attr(data-tooltip-bottom);
	margin-top: 15px;
}
.other .visit_btn {
	background: rgba(255, 255, 255, .1) !important;
	color: gray !important
}

#ripple {
  width: 10px;
  z-index: -99999;
  height: 10px;
  background: #212121;
  position: absolute;
  border-radius: 99999999px;
  transition: all .5s;
  animation: ripple .6s forwards;
  display: none
}
@keyframes ripple {
  0% {
    /* top: -50vh;
		right: -50vw; */

    opacity: 0;
  }
  10% {opacity:1}
  100% {
    opacity: 1;
    /* top: -50vh;
    right: -50vw; */
    
    transform: scale(500)
  }
}
@media only screen and (max-width: 500px) {
	@keyframes ripple {
  0% {
    /* top: -50vh;
		right: -50vw; */

    opacity: 0;
  }
  10% {opacity:1}
  100% {
    opacity: 1;
    /* top: -50vh;
    right: -50vw; */
    
    transform: scale(300)
  }
}
}
body {
	transition: all .2s
}
h1, h2, h3, h4, h5, h6, a, p, .card, span {
	transition: color .2s
}
.dark {
  background: #212121;
  color: #fff
}
.dark nav a {
	color: white !important
}
.dark .chip {
	color: white !important
}
.dark textarea, .dark input {
	color: white !important;
	background: transparent !important
}
.dark .card {
	color: white !important;
	background: rgba(255, 255, 255, .1) !important
}
.dark .input-border label {
	background: #212121 !important
}
.dark #ripple {
  background: white !important
}
.dark .modal-overlay {
	background: rgba(255, 255, 255, .3) !important
}
.dark .modal {
	background: #303030 !important
}
.dark span[style] {
	color: white !important
}

